Removed JavaFX test code Upgraded to Java 11 Upgraded slf4j to version 1.7.26 Upgraded junit to version 4.13.2